--- a/index.html
+++ b/index.html
@@ -326,6 +326,38 @@
 
          </div>
       </div>
+      <div class="help">
+         <div class="help__wrapper">
+            <div class="help__title-container">
+               <h2 class="help__title title-h2 dark"><span class="span-1"> Не знаете, что</span> <span
+                     class="span-2">выбрать?</span>
+                  <span class="span-3">Пройдите</span> <span class="span-4">тест</span>
+                  <span class="span-5">и мы вам</span> <span class="span-6"> поможем</span> <span class="span-7">
+                     с выбор<span class="in-black-stared">о</span>м</span> <span class="span-8">направления</span>
+               </h2>
+               <div class="help__img-1">
+                  <img src="img/help/1.png" alt="">
+               </div>
+               <div class="help__img-2">
+                  <img src="img/help/2.png" alt="">
+               </div>
+               <div class="help__img-3">
+                  <div class="help__title-in-picture-container"></div>
+                  <h2 class="help__title-in-pickture title-h2"><span class="span-1"> Не знаете, что</span> <span
+                        class="span-2">выбрать?</span>
+                     <span class="span-3">Пройдите</span> <span class="span-4">тест</span>
+                     <span class="span-5">и мы вам</span> <span class="span-6"> поможем</span> <span class="span-7">
+                        с выбор<span class="in-black-stared">о</span>м</span> <span class="span-8">направления</span>
+                  </h2>
+               </div>
+               <div class="help__link">
+                  <a href="#">
+                     <img src="img/help/link.png" alt="">
+                  </a>
+               </div>
+            </div>
+         </div>
+      </div>
    </section>
    <script src="https://unpkg.com/swiper@8/swiper-bundle.min.js"></script>
    <script src="js/script.js"></script>
