--- a/index.html
+++ b/index.html
@@ -359,6 +359,40 @@
          </div>
       </div>
    </section>
+   <div class="schedule">
+      <div class="schedule__wrapper">
+         <div class="schedule__container">
+            <div class="schedule__top">
+               <h2 class="schedule__title title-h2">Распи<span class="star-in">с</span>ание</h2>
+               <div class="schedule__top-all-link">
+                  <a href="" class="schedule__top-link typesetting">Открыть все расписание</a>
+               </div>
+            </div>
+            <ul class="schedule__list">
+               <li class="shedule__link">
+                  <a href="#" class="shedule__link-days">вт, ср, чт, сб</a>
+                  <a href="#" class="shedule__link-name title-h3">Кундалини йога</a>
+                  <a href="" class="shedule__link-more-info typesetting">Узнать подробнее</a>
+               </li>
+               <li class="shedule__link">
+                  <a href="#" class="shedule__link-days">ср, пт, сб</a>
+                  <a href="#" class="shedule__link-name title-h3">Нидра-йога</a>
+                  <a href="" class="shedule__link-more-info typesetting">Узнать подробнее</a>
+               </li>
+               <li class="shedule__link">
+                  <a href="#" class="shedule__link-days">пн, вт, чт, пт</a>
+                  <a href="#" class="shedule__link-name title-h3">Хатха-йога</a>
+                  <a href="" class="shedule__link-more-info typesetting">Узнать подробнее</a>
+               </li>
+               <li class="shedule__link">
+                  <a href="#" class="shedule__link-days">пн, вт, чт, пт</a>
+                  <a href="#" class="shedule__link-name title-h3">Карма-йога</a>
+                  <a href="" class="shedule__link-more-info typesetting">Узнать подробнее</a>
+               </li>
+            </ul>
+         </div>
+      </div>
+   </div>
    <script src="https://unpkg.com/swiper@8/swiper-bundle.min.js"></script>
    <script src="js/script.js"></script>
 </body>
