--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
       <div class="come__wrapper">
          <div class="come__title">
             <h2 class="come__title-top title-h2">Прийти к нам</h2>
-            <h2 class="come__title-bottom title-h2">Прийти к своей мечте!</h2>
+            <h2 class="come__title-bottom title-h2"> <span>Прийти к своей</span> мечте!</h2>
          </div>
          <div class="come__first-picture"><img src="img/come/1.png" alt=""></div>
          <div class="come__second-pict"><span class="star-in"></span><img src="img/come/2.png" alt=""></div>
@@ -118,7 +118,7 @@
    <div class="feed-back">
       <div class="feed-back__wrapper">
          <div class="feed-back__title title-h2">
-            Что вы п<span class="star-in title-h2__star">о</span>лучаете
+            Что вы <p>п<span class="star-in title-h2__star">о</span>лучаете</p>
             <span class="feed-back__title-bottom">В результате занятия йогой</span>
          </div>
          <div class="feed-back__first-picture">
