--- a/index.html
+++ b/index.html
@@ -167,16 +167,23 @@
                </h2>
             </div>
             <div class="secrets__text dark">
-               Для нас практика йоги — это не просто физкультура и не мистический ритуал. Мы стараемся донести
-               до широкой аудитории важность дыхания и контакта со своим телом, ценность выработки регулярности
-               в занятиях и необходимость направлять внимание из суеты внешнего мира во внутрь себя.
+               <p>
+                  Для нас практика йоги — это не просто физкультура и не мистический ритуал. Мы стараемся донести
+                  до широкой аудитории важность дыхания и контакта со своим телом, ценность выработки регулярности
+                  в занятиях и необходимость направлять внимание из суеты внешнего мира во внутрь себя.
+               </p>
+
             </div>
             <div class="secrets__samll-text dark">
-               Мы существуем для того, чтобы развивать йогу в городе, который любим. Мы бесконечно влюблены
-               в эту практику и верим в её уникальную способность объединять тело, ум и душу. Yoga-Go для нас —
-               это не просто студия, это любимое дело, которому мы готовы посвящать себя целиком. Перезагрузитесь
-               и отдохнёте душой и телом. Yoga специализируется не на конкретном стиле йоги, а представляет направления
-               йоги максимально широко, чтобы каждый смог подобрать для себя группу и преподавателя по душе.
+               <p>
+                  Мы существуем для того, чтобы развивать йогу в городе, который любим. Мы бесконечно влюблены
+                  в эту практику и верим в её уникальную способность объединять тело, ум и душу. Yoga-Go для нас —
+                  это не просто студия, это любимое дело, которому мы готовы посвящать себя целиком. Перезагрузитесь
+                  и отдохнёте душой и телом. Yoga специализируется не на конкретном стиле йоги, а представляет
+                  направления
+                  йоги максимально широко, чтобы каждый смог подобрать для себя группу и преподавателя по душе.
+               </p>
+
                <div class="secrets__link">
                   <a class="secrets__link-a" href="#l">
                      <img src="img/secrets/link.svg" alt="">
@@ -185,8 +192,16 @@
             </div>
 
             <div class="secrets__pictures">
-               <div class="secrets__picture-1"><img src="img/secrets/1.png" alt=""></div>
-               <div class="secrets__picture-2"><img src="img/secrets/2.png" alt=""></div>
+               <div class="secrets__picture-1" data-da=".secrets__samll-text,690,1"><img src="img/secrets/1.png" alt="">
+               </div>
+               <div class="secrets__picture-2" data-da=".secrets__text,690,last">
+                  <picture>
+                     <source media="(min-width: 1px)" srcset="img/secrets/22.png">
+                     <img src="img/secrets/2.png" alt="">
+                  </picture>
+               </div>
+
+
                <div class="secrets__picture-3"><img src="img/secrets/3.png" alt=""></div>
             </div>
          </div>
