--- a/index.html
+++ b/index.html
@@ -220,7 +220,10 @@
                   <div class="swiper-slide">
                      <div class="slide__container">
                         <div class="slide__img">
-                           <img src="img/soul/1.png" alt="Kundalini yoga">
+                           <picture>
+                              <source media="(min-width: 1220px)" srcset="img/soul/1.png">
+                              <img src="img/soul/11.png" alt="Kundalini yoga">
+                           </picture>
                         </div>
                         <div class="slide__content">
                            <h3 class="slide__title title-h3 dark">
@@ -266,7 +269,10 @@
                   <div class="swiper-slide">
                      <div class="slide__container">
                         <div class="slide__img">
-                           <img src="img/soul/1.png" alt="Kundalini yoga">
+                           <picture>
+                              <source media="(min-width: 1220px)" srcset="img/soul/1.png">
+                              <img src="img/soul/11.png" alt="Kundalini yoga">
+                           </picture>
                         </div>
                         <div class="slide__content">
                            <h3 class="slide__title title-h3 dark">
