--- a/index.html
+++ b/index.html
@@ -357,19 +357,24 @@
                      с выбор<span class="in-black-stared">о</span>м</span> <span class="span-8">направления</span>
                </h2>
                <div class="help__img-1">
-                  <img src="img/help/1.png" alt="">
+                  <picture>
+                     <source media="(min-width: 690px)" srcset="img/help/1.png">
+                  </picture>
+                  <img src="img/help/11.png" alt="">
                </div>
                <div class="help__img-2">
                   <img src="img/help/2.png" alt="">
                </div>
                <div class="help__img-3">
-                  <div class="help__title-in-picture-container"></div>
-                  <h2 class="help__title-in-pickture title-h2"><span class="span-1"> Не знаете, что</span> <span
-                        class="span-2">выбрать?</span>
-                     <span class="span-3">Пройдите</span> <span class="span-4">тест</span>
-                     <span class="span-5">и мы вам</span> <span class="span-6"> поможем</span> <span class="span-7">
-                        с выбор<span class="in-black-stared">о</span>м</span> <span class="span-8">направления</span>
-                  </h2>
+                  <div class="help__title-in-picture-container">
+                     <h2 class="help__title-in-pickture title-h2"><span class="span-1"> Не знаете, что</span> <span
+                           class="span-2">выбрать?</span>
+                        <span class="span-3">Пройдите</span> <span class="span-4">тест</span>
+                        <span class="span-5">и мы вам</span> <span class="span-6"> поможем</span> <span class="span-7">
+                           с выбор<span class="in-black-stared">о</span>м</span> <span class="span-8">направления</span>
+                     </h2>
+                  </div>
+
                </div>
                <div class="help__link">
                   <a href="#">
@@ -385,7 +390,7 @@
          <div class="schedule__container">
             <div class="schedule__top">
                <h2 class="schedule__title title-h2">Распи<span class="star-in">с</span>ание</h2>
-               <div class="schedule__top-all-link">
+               <div class="schedule__top-all-link" data-da=".schedule__container,690,last">
                   <a href="" class="schedule__top-link typesetting">Открыть все расписание</a>
                </div>
             </div>
