--- a/index.html
+++ b/index.html
@@ -460,15 +460,16 @@
             <span class="in-white-stared">О</span>ставьте
             <p>свои данные</p>
             <p><img src="img/check-list/vector.svg" alt=""></p>
-            <p>П<span class="in-white-stared">o</span>лучите чек-лист</p>
+            <p>П<span class="in-white-stared">o</span>лучите <br> чек-лист</p>
             <p>по растяжке</p>
          </h2>
          <form action="#" class="check-list__form">
             <div class="check-list__container typesetting">
                <p><input class="check-list__input" placeholder="Ваш e-mail" type="email" name="" id=""></p>
-               <p class="checkbox"><input class="check-list__checkbox " type="checkbox" name="" id=""> Согласен(а) на <a
-                     class="typesetting" href="">обработку
-                     персональных данных</a></p>
+               <div class="checkbox"><input class="check-list__checkbox " type="checkbox" name="" id="">
+                  <p>Согласен(а) на <a class="typesetting" href="">обработку
+                        персональных данных</a></p>
+               </div>
             </div>
             <button class="check-list__btn" type="submit"><img src="img/check-list/linked-path.png" alt=""></button>
          </form>
