--- a/index.html
+++ b/index.html
@@ -973,7 +973,10 @@
          </div>
       </div>
    </footer>
-
+   <div class="to-up">
+      <div class="to-up__container"><a data-goto=".header" class="menu__link title-h2 in-black-stared" href="#">↑</a>
+      </div>
+   </div>
    <script src="https://unpkg.com/swiper@8/swiper-bundle.min.js"></script>
    <script src="js/script.js"></script>
 
